force-app/main/default/objects/Credit_Limit_Application__c/Credit_Limit_Application__c.object-meta.xml
<CustomObject>
    <label>Credit Limit Application</label>
    <nameField>
        <displayFormat>LA-{00000000}</displayFormat>
        <label>Credit Limit No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Limit Application</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>