force-app/main/default/objects/Credit_Limit_Application__c/fields/Advance_Charge__c.field-meta.xml
<CustomField>
    <fullName>Advance_Charge__c</fullName>
    <description>预付款比例</description>
    <label>Advance payment percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>