force-app/main/default/objects/Credit_Limit_Application__c/fields/Approval_Limit__c.field-meta.xml
<CustomField>
    <fullName>Approval_Limit__c</fullName>
    <label>Approval Limit</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>