force-app/main/default/objects/Credit_Limit_Application__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>RR Approving</fullName>
                <label>RR Finance Approving</label>
            </value>
            <value>
                <fullName>Risk Post Approved</fullName>
            </value>
            <value>
                <fullName>Risk Post Rejected</fullName>
            </value>
            <value>
                <fullName>Risk Management Committee Approved</fullName>
            </value>
            <value>
                <fullName>Risk Management Committee Rejected</fullName>
            </value>
            <value>
                <fullName>Insurance Company Approved</fullName>
            </value>
            <value>
                <fullName>Insurance Company Rejected</fullName>
            </value>
            <value>
                <fullName>Approved - financial processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>