force-app/main/default/objects/Credit_Limit_Application__c/fields/Buyer_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Country_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer Country Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PickList__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Master_Data_RR_Country</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PickList__c</referenceTo>
    <relationshipName>Credit_Limit_Application3</relationshipName>
    <type>Lookup</type>
</CustomField>