force-app/main/default/objects/Credit_Limit_Application__c/fields/Buyer_English_Address__c.field-meta.xml
<CustomField>
    <fullName>Buyer_English_Address__c</fullName>
    <label>Buyer English Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>