force-app/main/default/objects/Credit_Limit_Application__c/fields/Buyer_English_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_English_Name__c</fullName>
    <formula>IF( ISBLANK(Customer__r.Buyer_English_Name__c) , Customer__r.Name, Customer__r.Buyer_English_Name__c)</formula>
    <inlineHelpText>Financial required</inlineHelpText>
    <label>Buyer English Name</label>
    <type>Text</type>
</CustomField>