force-app/main/default/objects/Credit_Limit_Application__c/fields/Buyer_Fax__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Fax__c</fullName>
    <label>Buyer Fax</label>
    <length>200</length>
    <type>Text</type>
</CustomField>