force-app/main/default/objects/Credit_Limit_Application__c/fields/Buyer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Phone__c</fullName>
    <label>Buyer Phone</label>
    <length>200</length>
    <type>Text</type>
</CustomField>