force-app/main/default/objects/Credit_Limit_Application__c/fields/Buyer_VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>Buyer_VAT_Number__c</fullName>
    <label>Buyer VAT Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>