force-app/main/default/objects/Credit_Limit_Application__c/fields/China_Credit_Insurance_Buyer_Code__c.field-meta.xml
<CustomField>
    <fullName>China_Credit_Insurance_Buyer_Code__c</fullName>
    <formula>Customer__r.RR_China_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>China Credit Insurance Buyer Code</label>
    <type>Text</type>
</CustomField>