force-app/main/default/objects/Credit_Limit_Application__c/fields/China_Credit_Insurance_Guarantor_Code__c.field-meta.xml
<CustomField>
    <fullName>China_Credit_Insurance_Guarantor_Code__c</fullName>
    <label>China Credit Insurance Guarantor Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>