force-app/main/default/objects/Credit_Limit_Application__c/fields/Circular_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Circular_Y_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Circular (Y/N)</label>
    <type>Checkbox</type>
</CustomField>