force-app/main/default/objects/Credit_Limit_Application__c/fields/Company_3_Years_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Company_3_Years_Turnover__c</fullName>
    <label>Company 3 Years Turnover</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>