force-app/main/default/objects/Credit_Limit_Application__c/fields/Competitive_Product_Information__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Product_Information__c</fullName>
    <label>Competitor Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>