force-app/main/default/objects/Credit_Limit_Application__c/fields/Competitive_Product_Period__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Product_Period__c</fullName>
    <label>Competitor Payment Term</label>
    <length>39</length>
    <type>Text</type>
</CustomField>