force-app/main/default/objects/Credit_Limit_Application__c/fields/Confirmation_Bank_English_Name__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Bank_English_Name__c</fullName>
    <inlineHelpText>When Credit Insurance Confirmation is Selected , Confirmation Bank English Name cannot be empty!</inlineHelpText>
    <label>Confirming Bank English Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>