force-app/main/default/objects/Credit_Limit_Application__c/fields/Confirming_Bank_Address_English__c.field-meta.xml
<CustomField>
    <fullName>Confirming_Bank_Address_English__c</fullName>
    <inlineHelpText>When Credit Insurance Confirmation is Selected , Confirming Bank Address (English) cannot be Empty !</inlineHelpText>
    <label>Confirming Bank Address (English)</label>
    <type>TextArea</type>
</CustomField>