force-app/main/default/objects/Credit_Limit_Application__c/fields/Corporate_Logo__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Logo__c</fullName>
    <label>Corporate Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>