force-app/main/default/objects/Credit_Limit_Application__c/fields/Credit_Application_Period_days__c.field-meta.xml
<CustomField>
    <fullName>Credit_Application_Period_days__c</fullName>
    <label>Customer Payment Term (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>