force-app/main/default/objects/Credit_Limit_Application__c/fields/Credit_Evaluation_Score__c.field-meta.xml
<CustomField>
    <fullName>Credit_Evaluation_Score__c</fullName>
    <label>Credit Evaluation Score</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>