force-app/main/default/objects/Credit_Limit_Application__c/fields/Credit_Guarantee_Issuing_Bank_SWIFT__c.field-meta.xml
<CustomField>
    <fullName>Credit_Guarantee_Issuing_Bank_SWIFT__c</fullName>
    <label>Credit Guarantee Issuing Bank SWIFT</label>
    <length>11</length>
    <type>Text</type>
</CustomField>