force-app/main/default/objects/Credit_Limit_Application__c/fields/Credit_Insurance_Confirmation_Bank_SWIFT__c.field-meta.xml
<CustomField>
    <fullName>Credit_Insurance_Confirmation_Bank_SWIFT__c</fullName>
    <inlineHelpText>When Credit Insurance Confirmation is Selected , Credit Insurance Confirmation Bank SWIFT cannot be Empty !</inlineHelpText>
    <label>Credit Insurance Confirming Bank SWIFT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>