force-app/main/default/objects/Credit_Limit_Application__c/fields/Credit_Insurance_Confirmation_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Credit_Insurance_Confirmation_Y_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Insurance Confirmation(Y/N)</label>
    <type>Checkbox</type>
</CustomField>