force-app/main/default/objects/Credit_Limit_Application__c/fields/Credit_Limit_for_Application_RAND__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_for_Application_RAND__c</fullName>
    <label>Credit Limit for Application</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>