force-app/main/default/objects/Credit_Limit_Application__c/fields/Credit_Limit_for_Application_USD__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_for_Application_USD__c</fullName>
    <label>Credit Limit for Application(USD)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>