force-app/main/default/objects/Credit_Limit_Application__c/fields/Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating__c</fullName>
    <label>Credit Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>