force-app/main/default/objects/Credit_Limit_Application__c/fields/Credit_Report_Recommendation_Quota__c.field-meta.xml
<CustomField>
    <fullName>Credit_Report_Recommendation_Quota__c</fullName>
    <label>Credit Report Recommendation Quota</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>