force-app/main/default/objects/Credit_Limit_Application__c/fields/Current_Credit_Limits__c.field-meta.xml
<CustomField>
    <fullName>Current_Credit_Limits__c</fullName>
    <label>Current Credit Limits</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>