force-app/main/default/objects/Credit_Limit_Application__c/fields/Current_Customer_Receivable_Balance_USD__c.field-meta.xml
<CustomField>
    <fullName>Current_Customer_Receivable_Balance_USD__c</fullName>
    <label>Current Customer Receivable Balance(USD)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>