force-app/main/default/objects/Credit_Limit_Application__c/fields/Current_Order_Amount_RAND__c.field-meta.xml
<CustomField>
    <fullName>Current_Order_Amount_RAND__c</fullName>
    <label>Current Order Amount (RAND)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>