force-app/main/default/objects/Credit_Limit_Application__c/fields/Current_Order_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Current_Order_Amount_USD__c</fullName>
    <label>Current Order Amount (USD)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>