force-app/main/default/objects/Credit_Limit_Application__c/fields/CurrentCustomer_Receivable_Balance_RAND__c.field-meta.xml
<CustomField>
    <fullName>CurrentCustomer_Receivable_Balance_RAND__c</fullName>
    <label>CurrentCustomer Receivable Balance(RAND)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>