force-app/main/default/objects/Credit_Limit_Application__c/fields/Direct_Sales_Department_Location__c.field-meta.xml
<CustomField>
    <fullName>Direct_Sales_Department_Location__c</fullName>
    <formula>Text(CreatedBy.Direct_Sales_Department_Location__c)</formula>
    <label>Direct Sales Department Location</label>
    <type>Text</type>
</CustomField>