force-app/main/default/objects/Credit_Limit_Application__c/fields/Effective_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Time__c</fullName>
    <label>Effective End Time</label>
    <type>Date</type>
</CustomField>