force-app/main/default/objects/Credit_Limit_Application__c/fields/Effective_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Time__c</fullName>
    <label>Effective Start Time</label>
    <type>Date</type>
</CustomField>