force-app/main/default/objects/Credit_Limit_Application__c/fields/Estimated_Transaction_Amount_CY__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Transaction_Amount_CY__c</fullName>
    <label>Estimated Current Year Sales Revenue</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>