force-app/main/default/objects/Credit_Limit_Application__c/fields/Expected_This_Year_Total_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Expected_This_Year_Total_Turnover__c</fullName>
    <label>Expected This Year Total Turnover</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>