force-app/main/default/objects/Credit_Limit_Application__c/fields/Export_Goods_Name__c.field-meta.xml
<CustomField>
    <fullName>Export_Goods_Name__c</fullName>
    <label>Export Goods Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>