force-app/main/default/objects/Credit_Limit_Application__c/fields/Final_Availability__c.field-meta.xml
<CustomField>
    <fullName>Final_Availability__c</fullName>
    <label>Final Availability</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>