force-app/main/default/objects/Credit_Limit_Application__c/fields/Guarantor_English_Address__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_English_Address__c</fullName>
    <inlineHelpText>When Credit Insurance Confirmation is Selected , Guarantor English Address cannot be Empty !</inlineHelpText>
    <label>Guarantor English Address</label>
    <type>TextArea</type>
</CustomField>