force-app/main/default/objects/Credit_Limit_Application__c/fields/Guarantor_English_Name__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_English_Name__c</fullName>
    <inlineHelpText>When Credit Insurance Confirmation is Selected , Guarantor Enllish Name cannot be Empty !</inlineHelpText>
    <label>Guarantor English Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>