force-app/main/default/objects/Credit_Limit_Application__c/fields/Guarantor_Fax__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Fax__c</fullName>
    <label>Guarantor Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>