force-app/main/default/objects/Credit_Limit_Application__c/fields/Guarantor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Phone__c</fullName>
    <label>Guarantor Phone</label>
    <length>200</length>
    <type>Text</type>
</CustomField>