force-app/main/default/objects/Credit_Limit_Application__c/fields/Guarantor_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Registration_Number__c</fullName>
    <label>Guarantor Registration Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>