force-app/main/default/objects/Credit_Limit_Application__c/fields/His_Buyer_Payment__c.field-meta.xml
<CustomField>
    <fullName>His_Buyer_Payment__c</fullName>
    <label>Historical payment performance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>All payments are made on time.</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Payments are occasionally delayed.</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Habitual default on payments</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>There are large - scale and long - term payment defaults (over 60 days after the due date of payable amounts).</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>