force-app/main/default/objects/Credit_Limit_Application__c/fields/Hisense_Entity_From_SAP__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Entity_From_SAP__c</fullName>
    <formula>Text( Customer__r.Hisense_Entity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hisense Entity From SAP</label>
    <type>Text</type>
</CustomField>