force-app/main/default/objects/Credit_Limit_Application__c/fields/Historical_Transaction_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Historical_Transaction_Y_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Historical Transaction(Y/N)</label>
    <type>Checkbox</type>
</CustomField>