force-app/main/default/objects/Credit_Limit_Application__c/fields/If_Quoted_Company__c.field-meta.xml
<CustomField>
    <fullName>If_Quoted_Company__c</fullName>
    <label>Is it a listed company?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>