force-app/main/default/objects/Credit_Limit_Application__c/fields/Independently_control_the_credit_limit__c.field-meta.xml
<CustomField>
    <fullName>Independently_control_the_credit_limit__c</fullName>
    <description>是否自主掌握限额</description>
    <label>Independently control the credit limit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>