force-app/main/default/objects/Credit_Limit_Application__c/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <defaultValue>(&quot;中信保&quot;)</defaultValue>
    <label>Insurance Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>中信保</fullName>
                <default>true</default>
                <label>中信保</label>
            </value>
            <value>
                <fullName>太保</fullName>
            </value>
            <value>
                <fullName>COFACE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>