force-app/main/default/objects/Credit_Limit_Application__c/fields/Insurance_Company_Approved_Rejected_Comm__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Approved_Rejected_Comm__c</fullName>
    <label>Insurance Company Approved/Rejected Comm</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>