force-app/main/default/objects/Credit_Limit_Application__c/fields/Insurance_Company_Approved_Rejected_Time__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Approved_Rejected_Time__c</fullName>
    <label>Insurance Company Approved/Rejected Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>