force-app/main/default/objects/Credit_Limit_Application__c/fields/Insurance_Company_Approver_Rejecter__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Approver_Rejecter__c</fullName>
    <label>Insurance Company Approver/Rejecter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>