force-app/main/default/objects/Credit_Limit_Application__c/fields/Issuing_Bank_Address_English__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Bank_Address_English__c</fullName>
    <label>Issuing Bank Address (English)</label>
    <type>TextArea</type>
</CustomField>