force-app/main/default/objects/Credit_Limit_Application__c/fields/Issuing_Bank_English_Name__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Bank_English_Name__c</fullName>
    <label>Issuing Bank English Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>