force-app/main/default/objects/Credit_Limit_Application__c/fields/Issuing_Bank_Enterprise_Internal_Code__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Bank_Enterprise_Internal_Code__c</fullName>
    <label>Issuing Bank Enterprise Internal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>