force-app/main/default/objects/Credit_Limit_Application__c/fields/JP_FLAG__c.field-meta.xml
<CustomField>
    <fullName>JP_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>日本客户对应的信用申请，用来更新客户的信用申请审批状态</description>
    <label>日本信用申请标识</label>
    <type>Checkbox</type>
</CustomField>