force-app/main/default/objects/Credit_Limit_Application__c/fields/Last_3_Years_Transaction_Amount_1_USD__c.field-meta.xml
<CustomField>
    <fullName>Last_3_Years_Transaction_Amount_1_USD__c</fullName>
    <label>Last 3 Years&apos; Transaction Amount 1 (USD)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>