force-app/main/default/objects/Credit_Limit_Application__c/fields/Last_3Years_Transaction_Amount_1_RAND__c.field-meta.xml
<CustomField>
    <fullName>Last_3Years_Transaction_Amount_1_RAND__c</fullName>
    <label>Last 3Years&apos; Transaction Amount 1 (RAND)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>